--- a/test-app/src/app/components/bio/bio.component.html
+++ b/test-app/src/app/components/bio/bio.component.html
@@ -1,6 +1,6 @@
 <div class="bio">
     <div class="avatar-part">
-        <img src="{{user.avatar}}" alt="" class="avatar">
+        <img src="{{user?.avatar}}" alt="" class="avatar">
         <app-upload-image></app-upload-image>
     </div>
     <div class="text-part">
